admin page completed

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -113,6 +113,10 @@
 .logo {
   height: 4em;
 }
+.button {
+  margin-bottom: 100px;
+  margin-left: 50px;
+}
 
 @media (max-width: 600px) {
   .grid {
